past searches format changed

--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
 
             <div class="form-inline">
                 <h4>Search for a city:</h4>
-                <input class="form-control mr-sm-2 form-inline city" placeholder="Enter a city" id="place-city"
+                <input class="form-control form-inline city" placeholder="Enter a city" id="place-city"
                     aria-label="Search"></input>
                 <button class="btn btn-outline-info my-2 my-sm-0" onclick="citySearch()"> <i
                         class="fas fa-search"></i></button>
             </div>
 
             <!-- </div> -->
-            <ul class="list-group list-group-flush">
-                <li class="mx-auto button btn-sm  past-searches"></li>
+            <ul class="list-group list-group-flush mx-auto past-searches">
+                <!-- <li class="mx-auto button btn-sm past-searches"></li> -->
                 <!-- <li><button class="list-group-item" id="search1" onclick="search1()"></button></li> -->
                 <!-- <li><button class="list-group-item" id="search2" onclick="search2()"></button></li>
                 <li><button class="list-group-item" id="search3" onclick="search3()"></button></li>
                 <li><button class="list-group-item" id="search4" onclick="search4()"></button></li> -->
 
-                <br>
+                <!-- <br> -->
             </ul>
             <!-- </div> -->
         </aside>
@@ -58,14 +58,14 @@
                     <div id="main-city-name"></div>
                     <!-- Weather Icon JQuery -->
                     <div id="icon"><img id="wicon" src=""></div>
-                    <div id="main-current-conditions"></div>
-                    <div id="main-temp"></div>
-                    <div id="main-humidity"></div>
-                    <div id="main-wind-speed"></div>
-                    <div id="main-uv-index"></div>
-                    <div id="main-icon"></div>
-                    <div id="main-icon-test"></div>
-                    <div id="main-air-quality"></div>
+                    <p id="main-current-conditions"></p>
+                    <p id="main-temp"></p>
+                    <p id="main-humidity"></p>
+                    <p id="main-wind-speed"></p>
+                    <p id="main-uv-index"></p>
+                    <p id="main-icon"></p>
+                    <p id="main-icon-test"></p>
+                    <p id="main-air-quality"></p>
                     <!-- <img id="main-image"></img> -->
 
                 </div>
