past searches turned into buttons

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                 <li><button class="list-group-item" id="search3" onclick="search3()"></button></li>
                 <li><button class="list-group-item" id="search4" onclick="search4()"></button></li> -->
 
+
+                <!-- <button class="search-test"></button>
+                <button class="search-test"></button>
+                <button class="search-test"></button> -->
+
                 <!-- <br> -->
             </ul>
             <!-- </div> -->
