Function added to make city re-search possible

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h4>Search for a city:</h4>
                 <input class="form-control form-inline city" placeholder="Enter a city" id="place-city"
                     aria-label="Search"></input>
-                <button class="btn btn-outline-info my-2 my-sm-0" onclick="citySearch()"> <i
+                <button class="btn btn-outline-info my-2 my-sm-0" id="search-city"> <i
                         class="fas fa-search"></i></button>
             </div>
 
