Added comment messages to JavaScript

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <!--Current City Name -->
                 <div id="main-city-name"></div>
                 <!-- Current Weather Icon Using JQuery -->
-                <div id="icon"><img id="wicon" src=""></div>
+                <div id="icon"><img id="weatherIcon" src=""></div>
                 <!-- Current Temperature -->
                 <p id="main-temp"></p>
                 <!-- CUrrent Humidity -->
