--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <input class="form-control form-inline city" placeholder="Enter a city" id="place-city"
                     aria-label="Search"></input>
                 <!-- Button to click to run main function, and search! using font awesome for the button symbol -->
-                <button class="btn btn-outline-info my-2 my-sm-0" id="search-city"> <i
+                <button class="btn btn-outline-primary my-2 my-sm-0 search-icon" id="search-city"> <i
                         class="fas fa-search"></i></button>
             </div>
 
@@ -154,6 +154,10 @@
 
     <!-- End of Weather -->
 
+    <!-- Footer! Copyright and Love -->
+    <footer class="footer fixed-bottom">
+        <h6>&#169 and &#9829 Sean Melody 2020</h6>
+    </footer>
 
     <!-- jQuery Script Tags -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
