--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <input class="form-control form-inline city" placeholder="Enter a city" id="place-city"
                     aria-label="Search"></input>
                 <!-- Button to click to run main function, and search! using font awesome for the button symbol -->
-                <button class="btn btn-outline-primary my-2 my-sm-0 search-icon" id="search-city"> <i
-                        class="fas fa-search"></i></button>
+                <button class="btn btn-outline-primary my-2 my-sm-0 search-icon" id="search-city">
+                    <i class="fas fa-search"></i></button>
             </div>
 
 
