--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <!-- Script for Moments -->
     <script src="./assets/moment/moment.min.js"></script>
     <!-- My JavaScript Tag -->
-    <script src="assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
