--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Search bar and button -->
             <div class="form-inline">
                 <!-- Title of Aside -->
-                <h4>Search for a city:</h4>
+                <h4 class="row col-md-12">Search for a city:</h4>
                 <!-- Input form for city search -->
                 <input class="form-control form-inline city" placeholder="Enter a city" id="place-city"
                     aria-label="Search"></input>
