--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <header>
         <div>
             <!-- Header Bar -->
-            <nav class="navbar bg-dark">
+            <nav class="navbar">
                 <!-- Centered Text using mx-auto -->
                 <h1 class="mx-auto"> Weather API </h1>
             </nav>
+            <hr>
         </div>
     </header>
     <!-- Content holds everything, all one Row -->
